[#4769] Création d'un champ de type Tableau (#54)
* mise en place read partie admin

* rectification method form

* ajout suppression fils parent

* ajout insert + redirection suppresion child parent

* crud admin

* partial component inputChamp

* dynamisme partial

* bug id = NULL

* supp com

* bug fix ID NULL + affichage valeur variable form custom vartext

* ajout special char

* rectif css + ajout htmlspecialchar

* fix-list champ fils et independant

* fix-list champ fils et independant

* fix faille XSS display champs

* htmlspecialchar inputChamp

* ajout canWrite

* read client descriptif etab

* partial formLoopInputChamp

* rectification checkbox

* avant edition verif technique

* read verification technique par partial

* ajout ecriture verif techniques

* rectif

* rectif indent

* fixme  +  suppression attribution inutile

* BUG FIX actualisation formulaire ajout champ

* suppression console.log

* suppression variable inutile

* ajout valeur champs fils

* ajout sql

* Fix du SQL d'ajout du type de champ parent

* rectif condition

* reconstruction generateur formulaire front

* read formulaire custom

* CRUD custom form

* bug rubriques

* suppression var_dump

* fix value int partial-input-champ

* rectification rubrique + supp var_dump

* uncomment

* rectif min

* rectif passage ligne input champ

* modif descripitf service champs fils parent

* generationpv

* generation odj

* generation compte rendu ok

* ajout generation  convoc

* php-cs-fixer

* correction magical number

* php-cs-fixer

* ajout admin tableau parent

* ajout generation tableau

* ajout tableau static

* rectification affichage valeur champ

* reajustement btn dans tableau

* ajout sql

* modif partial

* rectif js

* ajout ligne tableau static

* generation dynamique des ajout de ligne

* on-off-bouton  ajouter ligne tableau

* rm console.log + button

--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -57,6 +57,7 @@ foreach($this->informationsMembre as $val => $membre){
 
 			//Generation du segment villeDoss
 			$villeODF = $odf->setSegment('villeDoss');
+
 			foreach($this->listeCommunes as $val => $commune){
 				foreach($commune[1] as $comm => $info){
 					setVars($villeODF,'numMairie',$info["NUMEROADRESSE_UTILISATEURINFORMATIONS"]);
@@ -336,7 +337,11 @@ function retrieveInfoDossier($segment, $dossierInfos) {
         } else {
             setVars($avisDerogations, 'type', '');
             setVars($avisDerogations, 'titre', '');
-            setVars($avisDerogations, 'informations', '');
+            setVars($avisDerogations, 'objet', '');
+            setVars($avisDerogations, 'justification', '');
+            setVars($avisDerogations, 'articles_concernes', '');
+            setVars($avisDerogations, 'mesures_compensatoires_proposees', '');
+            setVars($avisDerogations, 'analyse_de_risque', '');
             setVars($avisDerogations, 'avis', '');
             setVars($avisDerogations, 'identifiantdossierleve', '');
             setVars($avisDerogations, 'affichagehistorique', '');
@@ -362,31 +367,85 @@ function retrieveInfoDossier($segment, $dossierInfos) {
                     ),
                     $rubrique['NOM']
                 );
+
                 foreach ($rubrique['CHAMPS'] as $champ) {
-                    //Si le champ est un champ Parent alors ....
-                    if($champ['ID_TYPECHAMP'] === 6){
-                        foreach ($champ['FILS'] as $champFils) {
-                            if ('Case à cocher' === $champFils['TYPE']) {
-                                if (true === boolval($champFils['VALEUR'])) {
-                                    $champFils['VALEUR'] = 'Oui';
-                                } else {
-                                    $champFils['VALEUR'] = 'Non';
+                    if ('Parent' === $champ['TYPE']) {
+                        if (1 === $champ['tableau']) {
+                            foreach ($champ['FILS'] as $idx => $champFils) {
+                                if(is_int($idx)){
+                                    setVars(
+                                        $segment,
+                                        $serviceUtils->getFullFusionName(
+                                            $formulaire['NOM_INTERNE'],
+                                            [
+                                                $rubrique['NOM'],
+                                                $champ['NOM'],
+                                                $champFils['idx']
+                                            ]
+                                        ),
+                                        $champFils['NOM']
+                                    );
                                 }
                             }
-                            setVars(
-                                $segment,
-                                $serviceUtils->getFullFusionName(
-                                    $formulaire['NOM_INTERNE'],
-                                    [
-                                        $rubrique['NOM'],
-                                        $champ['NOM'],
-                                        $champFils['NOM']
-                                    ]
-                                ),
-                                $champFils['VALEUR']
+
+                            $nomFusion = $serviceUtils->getFusionNameMagicalCase(
+                                $formulaire['NOM_INTERNE'].' '.
+                                $rubrique['NOM'].' '.
+                                $champ['NOM'].' '.
+                                'valeurs'
                             );
+
+                            try {
+                                $segmentTableau = $segment->$nomFusion;
+                            } catch (Exception $e) {}
+
+                            if (isset($segmentTableau)) {
+                                foreach ($champ['FILS']['VALEURS'] as $ligne) {
+                                    $idxCol = 0;
+
+                                    foreach ($ligne as $col) {
+                                        if ('Case à cocher' === $col['TYPE']) {
+                                            if (true === boolval($col['VALEUR'])) {
+                                                $col['VALEUR'] = 'Oui';
+                                            } else {
+                                                $col['VALEUR'] = 'Non';
+                                            }
+                                        }
+
+                                        setVars($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
+                                        $idxCol++;
+                                    }
+
+                                    $segmentTableau->merge();
+                                }
+                            }
+
+                            $segmentTableau = null;
+                        } else {
+                            foreach ($champ['FILS'] as $champFils) {
+                                if ('Case à cocher' === $champFils['TYPE']) {
+                                    if (true === boolval($champFils['VALEUR'])) {
+                                        $champFils['VALEUR'] = 'Oui';
+                                    } else {
+                                        $champFils['VALEUR'] = 'Non';
+                                    }
+                                }
+
+                                setVars(
+                                    $segment,
+                                    $serviceUtils->getFullFusionName(
+                                        $formulaire['NOM_INTERNE'],
+                                        [
+                                            $rubrique['NOM'],
+                                            $champ['NOM'],
+                                            $champFils['NOM']
+                                        ]
+                                    ),
+                                    $champFils['VALEUR']
+                                );
+                            }
                         }
-                    }else{
+                    } else {
                         // Définition du libellé pour les cases à cocher
                         if ('Case à cocher' === $champ['TYPE']) {
                             if (true === boolval($champ['VALEUR'])) {
@@ -395,6 +454,7 @@ function retrieveInfoDossier($segment, $dossierInfos) {
                                 $champ['VALEUR'] = 'Non';
                             }
                         }
+
                         setVars(
                             $segment,
                             $serviceUtils->getFullFusionName(
