--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -168,7 +168,11 @@ foreach($this->membresFiles as $val => $membre){
                             } else {
                                 addChamp($avisDerogations, 'type', '');
                                 addChamp($avisDerogations, 'titre', '');
-                                addChamp($avisDerogations, 'informations', '');
+                                addChamp($avisDerogations, 'objet', '');
+                                addChamp($avisDerogations, 'justification', '');
+                                addChamp($avisDerogations, 'articles_concernes', '');
+                                addChamp($avisDerogations, 'mesures_compensatoires_proposees', '');
+                                addChamp($avisDerogations, 'analyse_de_risque', '');
                                 addChamp($avisDerogations, 'avis', '');
                                 addChamp($avisDerogations, 'identifiantdossierleve', '');
                                 addChamp($avisDerogations, 'affichagehistorique', '');
@@ -188,7 +192,7 @@ foreach($this->membresFiles as $val => $membre){
                                 // Permet d'avoir les informations unitairement
                                 foreach ($formulaire['RUBRIQUES'] as $rubrique) {
                                     addChamp(
-                                        $odf,
+                                        $dossInfos,
                                         $serviceUtils->getFullFusionName(
                                             $formulaire['NOM_INTERNE'],
                                             [
@@ -198,28 +202,80 @@ foreach($this->membresFiles as $val => $membre){
                                         $rubrique['NOM']
                                     );
                                     foreach ($rubrique['CHAMPS'] as $champ) {
-                                        //Si le champ est un champ Parent alors ....
-                                        if ($champ['ID_TYPECHAMP'] === 6) {
-                                            foreach ($champ['FILS'] as $champFils) {
-                                                if ('Case à cocher' === $champFils['TYPE']) {
-                                                    if (true === boolval($champFils['VALEUR'])) {
-                                                        $champFils['VALEUR'] = 'Oui';
-                                                    } else {
-                                                        $champFils['VALEUR'] = 'Non';
+                                        if ('Parent' === $champ['TYPE']) {
+                                            if (1 === $champ['tableau']) {
+                                                foreach ($champ['FILS'] as $idx => $champFils) {
+                                                    if(is_int($idx)){
+                                                        addChamp(
+                                                            $dossInfos,
+                                                            $serviceUtils->getFullFusionName(
+                                                                $formulaire['NOM_INTERNE'],
+                                                                [
+                                                                    $rubrique['NOM'],
+                                                                    $champ['NOM'],
+                                                                    $champFils['idx']
+                                                                ]
+                                                            ),
+                                                            $champFils['NOM']
+                                                        );
                                                     }
                                                 }
-                                                addChamp(
-                                                    $odf,
-                                                    $serviceUtils->getFullFusionName(
-                                                        $formulaire['NOM_INTERNE'],
-                                                        [
-                                                            $rubrique['NOM'],
-                                                            $champ['NOM'],
-                                                            $champFils['NOM']
-                                                        ]
-                                                    ),
-                                                    $champFils['VALEUR']
+
+                                                $nomFusion = $serviceUtils->getFusionNameMagicalCase(
+                                                    $formulaire['NOM_INTERNE'].' '.
+                                                    $rubrique['NOM'].' '.
+                                                    $champ['NOM'].' '.
+                                                    'valeurs'
                                                 );
+
+                                                try {
+                                                    $segmentTableau = $dossInfos->$nomFusion;
+                                                } catch (Exception $e) {}
+
+                                                if (isset($segmentTableau)) {
+                                                    foreach ($champ['FILS']['VALEURS'] as $ligne) {
+                                                        $idxCol = 0;
+
+                                                        foreach ($ligne as $col) {
+                                                            if ('Case à cocher' === $col['TYPE']) {
+                                                                if (true === boolval($col['VALEUR'])) {
+                                                                    $col['VALEUR'] = 'Oui';
+                                                                } else {
+                                                                    $col['VALEUR'] = 'Non';
+                                                                }
+                                                            }
+
+                                                            addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
+                                                            $idxCol++;
+                                                        }
+
+                                                        $segmentTableau->merge();
+                                                    }
+                                                }
+
+                                                $segmentTableau = null;
+                                            } else {
+                                                foreach ($champ['FILS'] as $champFils) {
+                                                    if ('Case à cocher' === $champFils['TYPE']) {
+                                                        if (true === boolval($champFils['VALEUR'])) {
+                                                            $champFils['VALEUR'] = 'Oui';
+                                                        } else {
+                                                            $champFils['VALEUR'] = 'Non';
+                                                        }
+                                                    }
+                                                    addChamp(
+                                                        $dossInfos,
+                                                        $serviceUtils->getFullFusionName(
+                                                            $formulaire['NOM_INTERNE'],
+                                                            [
+                                                                $rubrique['NOM'],
+                                                                $champ['NOM'],
+                                                                $champFils['NOM']
+                                                            ]
+                                                        ),
+                                                        $champFils['VALEUR']
+                                                    );
+                                                }
                                             }
                                         } else {
                                             // Définition du libellé pour les cases à cocher
@@ -231,7 +287,7 @@ foreach($this->membresFiles as $val => $membre){
                                                 }
                                             }
                                             addChamp(
-                                                $odf,
+                                                $dossInfos,
                                                 $serviceUtils->getFullFusionName(
                                                     $formulaire['NOM_INTERNE'],
                                                     [
